Fixed image alignment in mobile view

--- a/index.css
+++ b/index.css
@@ -187,11 +187,11 @@ h1{
     grid-row: 1;
     grid-column: 1;
     z-index: 1;
-    transform: scale(0.75) translate(100px, -6em);
     z-index: 0;
   }
   .photo img{
-    width:90%;
+    width: 100%;
+    transform: scale(0.75) translate(3.79em, -5em);
   }
   .hello{
     grid-row: 1;
